Edit pom.xml v2.0