@@ -4,21 +4,18 @@ import constants.CommandsOutput;
 import constants.Numbers;
 import models.*;
 
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * Бот выводит рецепт по названию блюда.
  */
-public class DishByTitle extends Command
-{
-    public DishByTitle(ChiefBot bot)
-    {
+public class DishByTitle extends Command {
+    public DishByTitle(ChiefBot bot) {
         super(bot);
     }
 
     @Override
-    public void process(User user)
-    {
+    public void process(User user) {
         bot.setOutput(user, new Message(CommandsOutput.DISH_TITLE.toStringValue()));
         userService.addMessageWait(user, this::dishByTitle);
     }
@@ -26,26 +23,22 @@ public class DishByTitle extends Command
     /**
      * Выводит пользователю блюдо и его рецепт.
      */
-    private void dishByTitle(User user, Message message)
-    {
+    private void dishByTitle(User user, Message message) {
         String dishTitle = message.getText();
         Dish dishFromApi = findDishFromApi(dishTitle, user);
-        if (dishFromApi != null)
-        {
+        if (dishFromApi != null) {
             Message output = new Message(dishService.getStringFromDish(dishFromApi))
                     .setImageURL(dishFromApi.getImageUrl())
-                    .setButtons(List.of(List.of(
+                    .setButtons(Arrays.asList(Arrays.asList(
                             new Button("Show products", u -> sendProducts(u, dishFromApi)),
                             new Button("Show recipe", u -> sendRecipe(u, dishFromApi)))));
             bot.setOutput(user, output);
-        }
-        else
-        {
+        } else {
             Dish dishFromDao = bot.getDishService().findDishByTitle(dishTitle);
             bot.setOutput(user, dishFromDao != null
                     ? new Message(dishService.getStringFromDish(dishFromDao))
                     .setImageURL(dishFromDao.getImageUrl())
-                    .setButtons(List.of(List.of(
+                    .setButtons(Arrays.asList(Arrays.asList(
                             new Button("Show products", u -> sendProducts(u, dishFromDao)),
                             new Button("Show recipe", u -> sendRecipe(u, dishFromDao)))))
                     : new Message(CommandsOutput.DISH_IS_NOT_FOUND.toStringValue()));
@@ -55,10 +48,8 @@ public class DishByTitle extends Command
     /**
      * Попытаться с 5 попыток достать блюдо из апи.
      */
-    private Dish findDishFromApi(String dishTitle, User user)
-    {
-        for (int i = 0; i < Numbers.API_ATTEMPTS_TO_GET_REQUEST.toIntValue(); i++)
-        {
+    private Dish findDishFromApi(String dishTitle, User user) {
+        for (int i = 0; i < Numbers.API_ATTEMPTS_TO_GET_REQUEST.toIntValue(); i++) {
             Dish dish = apiService.getDishByTitle(dishTitle, user);
             if (dish != null) return dish;
         }
@@ -68,16 +59,14 @@ public class DishByTitle extends Command
     /**
      * Отправить пользователю рецепт.
      */
-    private void sendRecipe(User user, Dish dish)
-    {
+    private void sendRecipe(User user, Dish dish) {
         bot.setOutput(user, new Message(dish.getRecipeOutput()));
     }
 
     /**
      * Отправить пользователю продукты.
      */
-    private void sendProducts(User user, Dish dish)
-    {
+    private void sendProducts(User user, Dish dish) {
         Recipe recipe = dish.getRecipe();
         Message output = new Message(recipe.getProductsOutput());
         bot.setOutput(user, output);
