@@ -8,55 +8,46 @@ import models.Recipe;
 
 import java.util.*;
 
-public class SimpleDishDao extends DishDao
-{
+public class SimpleDishDao extends DishDao {
     private Map<String, Dish> dishes = new HashMap<>();
 
-    public SimpleDishDao()
-    {
+    public SimpleDishDao() {
         initiate();
     }
 
     @Override
-    public Dish get(String title)
-    {
+    public Dish get(String title) {
         return dishes.get(title.toLowerCase());
     }
 
     @Override
-    public List<Dish> getAll()
-    {
+    public List<Dish> getAll() {
         return new ArrayList<>(dishes.values());
     }
 
     @Override
-    public void save(Dish dish)
-    {
+    public void save(Dish dish) {
         dishes.put(dish.getTitle().toLowerCase(), dish);
     }
 
     @Override
-    public void update(String title, Dish dish)
-    {
+    public void update(String title, Dish dish) {
         dishes.put(title.toLowerCase(), dish);
     }
 
     @Override
-    public void delete(Dish dish)
-    {
+    public void delete(Dish dish) {
         dishes.remove(dish.getTitle().toLowerCase());
     }
 
     /**
      * Инициализация списка блюд.
      */
-    private void initiate()
-    {
-        dishes = new HashMap<>()
-        {
+    private void initiate() {
+        dishes = new HashMap<String, Dish>() {
             {
                 put("Яичница", new Dish("Яичница",
-                        new Recipe(List.of(new Product(new Ingredient("яйца"), "2 яица")),
+                        new Recipe(Collections.singletonList(new Product(new Ingredient("яйца"), "2 яица")),
                                 null), null, null));
 
                 put("Блины", new Dish("Блины", new Recipe(Arrays.asList(
